# ctf_dump

0ctf24/ip_management_system/: splo.py
dragon20/heaphop/: splo.py
google24q/unikernelpwn/: .gitignore  CMakeLists.txt  Dockerfile  build.sh  flag  hello_world.c  link.ld  loader.c  race_c.py  shared.h  syscalls_linux_amd64.h  syscalls_linux_arm64.h  syscalls_unikernel_amd64.h  unikernel_pid0_stage0.c  unikernel_pid0_stage1.c  unikernel_pid1.c
hitcon20/1010101/: 1010101_angr.py
hitcon20/atom/: fuzz_atom.c
hitcon20/basbyshock_revenge/: sol.txt
hitcon20/dual/: splo.py
hitcon20/revenge_of_pwn/: splo.py
hitcon20/tenet/: shellcode.s
hitcon24q/v8sbx/: patch.diff
hxp24/hxp_silicon_foundaries_hack4/: sc.py  splo.py
hxp24/hxp_silicon_foundaries_hack4/example_program/: CMakeLists.txt  ai.s  build.sh  example  example.b64  main.c  main.c.backup  pl
hxp24/mbins/: .gitignore  Cargo.toml  binaries.tar.xz  flag.txt.enc  solve.py
hxp24/mbins/clion/: CMakeLists.txt  decomp.c  mydefs.h  pg.c
hxp24/mbins/cursor/mbins-helper/: CMakeLists.txt  main  main.c
hxp24/mbins/src/: main.rs
tempaltes/: cshelcode.Makefile
